# erdos-szekeres-problem

./: 5point.py  6point.py  7point.py  README.md  output5.cnf
minisat_project_c++/: CMakeLists.txt  main.cpp
minisat_project_c++/minisat/minisat/core/: OutOfMemoryException.cc  ThrowOOMException.cc  ThrowOOMException.h
